--- a/src/index.css
+++ b/src/index.css
@@ -23,5 +23,5 @@
 }
 
 .content-div:hover {
-    background-image: linear-gradient(to right, rgba(112, 157, 255, 0.8) hsla(242, 74%, 61% 0.8));
+    background-image: linear-gradient(to right, rgba(112, 157, 255, 0.8), hsla(242, 74%, 61%, 0.8)) !important;
 }
